2003-01-28 22:54  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-textStorage:edited:range:changeInLength:
	invalidatedRange:): Add code to adjust the selected range after each
	change.

2003-01-28 22:20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-initWithFrame:textContainer:): Make the
	default text container inset (2,0).

2003-01-28 20:02  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter: Set proper used rect for line frag
	rects.

	* Source/GSLayoutManager.m (-usedRectForTextContainer:): Return sane
	value if there are no line frag rects in the text container.

2003-01-28 17:55  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m (-layoutLineNewParagraph:): Try to make
	sure each container gets at least one line frag rect.

	* Source/NSTextView: Avoid making calls to the layout manager with
	invalid arguments.

2003-01-28 17:40  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m, Source/GSLayoutManager.m:
	Whitespace cleanups and comments.

	* Source/NSLayoutManager.m: (-rectArrayForGlyphRange:
	withinSelectedGlyphRange:inTextContainer:rectCount:): Give better
	error message for an invalid glyph range.

2003-01-27 16:13  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-setHyphenationFactor:): Fix format
	string.

	* Source/NSTextView.m (-mouseDown:): Handle empty text views.
	(-drawRect:): Always draw glyphs' backgrounds (even when not drawing
	the text view's background).

Mon Jan 27 04:01:32 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSScroller.m ([-mouseDown:]): When the knob slot if
	clicked, do not set the new float value and send the action if the
	float value has not changed.
	
Mon Jan 27 03:16:22 2003  Benhur Stein <benhur@inf.ufsm.br>

	Patch with minor changes by Nicola:
	* Source/NSScroller.m ([-testPart:]): The point to test is now
	assumed to be in the window's coordinates.