@@ -1,3 +1,11 @@
+2003-01-28 23:29  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSTextView.m (-setConstrainedFrameSize:) Fix calculation of
+	the effective minimum size.
+
+	(-sizeToFit): Use maximum x and y of used rect to calculate size, not
+	the used rect's own size.
+
 2003-01-28 22:54  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/NSLayoutManager.m (-textStorage:edited:range:changeInLength:
